fixed bug delete contact would delete last element in contacts array and aligned modal label and input next to each other for edit contact

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,6 +2,11 @@ h1 {
   color: #00f;
 }
 
+label {
+  display: inline-block;
+  width: 120px;
+}
+
 .message {
   margin: 20px;
 }
